k8s_practica/sts-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: "svc-headless-mysql" # Tiene que hacer match con el headless service name    
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: cjcuesta/mysql:v4
        name: mysql
        command: ["/usr/local/bin/mysqld.sh"]
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
