k8s_practica/app-svc.yaml
# Servicio para exponer la app
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: LoadBalancer
  selector:
    app: app-flask
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
