k8s_practica/svc-app-flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-flask
spec:
  selector:
    app: app-flask
  ports:
    - port: 5000
