k8s_practica/svc-load-app-flask.yaml
# Servicio para exponer la app
apiVersion: v1
kind: Service
metadata:
  name: svc-load-app-flask
spec:
  type: LoadBalancer
  selector:
    app: app-flask
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
