k8s_practica/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql # Nombre DNS del servicio
spec:
  type: ClusterIP     # TIPO (lo iremos cambiando)
  selector:           # SELECTOR DE PODS (ENDPOINTS FINALES DEL SERVICIO)
    app: mysql
  ports:              # Puertos que abre el servicio
  - protocol: TCP
    port: 3306        # Puerto de escucha del servicio. PODEMOS ELEGIRLO.
    targetPort: 3306  # Puerto de escucha del pod. HA DE SER EL CORRECTO.
---
apiVersion: v1
kind: Service
metadata:
  name: svc-headless-mysql # Nombre DNS del servicio
spec:
  type: ClusterIP     # TIPO (lo iremos cambiando)
  clusterIP: None
  selector:           # SELECTOR DE PODS (ENDPOINTS FINALES DEL SERVICIO)
    app: mysql
  ports:              # Puertos que abre el servicio
  - protocol: TCP
    port: 3306        # Puerto de escucha del servicio. PODEMOS ELEGIRLO.
    targetPort: 3306  # Puerto de escucha del pod. HA DE SER EL CORRECTO.
